# user_management_application

./: .gitignore  Cargo.toml  README.md  build.sh  diesel.toml
src/: db.rs  main.rs  schema.rs
src/models/: user.rs
src/routes/: user_routes.rs
