[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
actix-rt = "2.5.0"
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# uuid = { version = "1.0", features = ["serde", "v4"] }
env_logger = "0.9.0"
log = "0.4"
chrono = {version = "0.4", features = ["serde"] }
r2d2 = "0.8.9"
actix-cors = "0.6.1"

[dependencies.diesel_migrations]
version = "2.0.0"

[dependencies.uuid]
version = "1.10.0"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]